--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ternproxy",
-  "version": "0.0.1",
-  "main": "src/server.js",
+  "version": "0.0.2",
+  "main": "src/daemon.js",
   "license": "Unlicense",
   "dependencies": {
     "tern": "git://github.com/marijnh/tern.git",
-    "debug": "~0.7.2",
-    "formidable": "~1.0.13"
+    "formidable": "1.0.x",
+    "deepmerge": "0.2.x",
+    "findpkg": "0.0.x",
+    "lodash": "1.2.x",
+    "tryor": "0.1.x"
   }
 }
