remove node from default config

--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,6 @@
   "libs": ["browser", "ecma5"],
   "loadEagerly": false,
   "plugins": {
-    "doc_comment": true,
-    "node": {}
+    "doc_comment": true
   }
 }
