--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
 .DS_Store
-#node_modules
 xcuserdata
 project.xcworkspace
 
+node_modules/**/test
+node_modules/**/example
+node_modules/**/examples
+node_modules/**/README.markdown
+node_modules/**/Readme.md
+node_modules/**/.bin
+node_modules/**/bin
+node_modules/**/*.html
+node_modules/**/.npmignore
+node_modules/**/.travis.yml
+node_modules/**/component.json
+node_modules/tern/doc/**
+node_modules/tern/emacs/**
+node_modules/tern/node_modules/acorn/**/*.css
+node_modules/formidable/benchmark/**
+node_modules/formidable/tool/**
+node_modules/posix/src/**
+node_modules/tern/node_modules/marked/man/**
+node_modules/tern/node_modules/marked/Makefile
+
+node_modules/tern/node_modules/glob/node_modules/inherits/test.js
+node_modules/tern/node_modules/minimatch/node_modules/sigmund/bench.js
+node_modules/tern/node_modules/minimatch/node_modules/lru-cache/s.js
+node_modules/tern/node_modules/glob/node_modules/inherits/inherits_browser.js
