--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "ternproxy",
   "version": "0.0.9pre",
-  "main": "src/daemon.js",
+  "main": "src/proxy/daemon.js",
   "license": "Unlicense",
   "dependencies": {
     "tern": "git://github.com/ramitos/tern.git",
     "formidable": "1.0.x",
     "deepmerge": "0.2.x",
     "optimist": "0.5.x",
-    "findpkg": "0.0.x",
     "tryor": "0.1.x",
-    "posix": "1.0.x"
+    "posix": "1.0.x",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "request": "2.21.x",
