--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,20 @@ node_modules/tern/node_modules/acorn/**/*.css
 node_modules/formidable/benchmark/**
 node_modules/formidable/tool/**
 node_modules/posix/src/**
+node_modules/semver/bin
+node_modules/semver/test
+node_modules/semver/foot.js
+node_modules/semver/head.js
+node_modules/semver/Makefile
+node_modules/semver/r.js
+node_modules/semver/README.md
+node_modules/semver/semver.browser.js
+node_modules/semver/semver.browser.js.gz
+node_modules/semver/semver.min.js
+node_modules/semver/semver.min.js.gz
 node_modules/tern/node_modules/marked/man/**
 node_modules/tern/node_modules/marked/Makefile
+
 
 node_modules/tern/node_modules/glob/node_modules/inherits/test.js
 node_modules/tern/node_modules/minimatch/node_modules/sigmund/bench.js
