--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "main": "src/proxy/daemon.js",
   "license": "Unlicense",
   "dependencies": {
-    "tern": "fileability/tern",
-    "formidable": "~1.0.14",
-    "deepmerge": "~0.2.7",
-    "optimist": "~0.6.1",
-    "semver": "~2.2.1",
-    "tryor": "~0.1.2",
-    "posix": "~1.0.3",
     "async": "~0.2.10",
-    "mkdirp": "~0.3.5"
+    "deepmerge": "~0.2.7",
+    "formidable": "~1.0.14",
+    "mkdirp": "~0.3.5",
+    "optimist": "~0.6.1",
+    "posix": "^1.0.3",
+    "semver": "~2.2.1",
+    "tern": "fileability/tern#1.0",
+    "tryor": "~0.1.2"
   },
   "devDependencies": {
     "request": "2.21.x",
