remove more cruft

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,27 @@
-node_modules/**/bower.json
-node_modules/**/component.json
-node_modules/**/readme.txt
-node_modules/**/*.md
-node_modules/**/*.markdown
-node_modules/**/HISTORY.md
-node_modules/**/CHANGELOG.md
-node_modules/**/.jshintrc
-node_modules/**/.travis.yml
-node_modules/**/.tern-project
-node_modules/**/.gitattributes
-node_modules/**/.npmignore
-node_modules/**/.no-sublime-package
-node_modules/**/.editorconfig
-node_modules/**/examples
-node_modules/**/Gruntfile.js
-node_modules/**/.gitmodules
-node_modules/**/README*
-node_modules/**/.eslintrc
-node_modules/**/.jscs.json
-node_modules/**/test.js
-node_modules/**/test
-node_modules/**/example
-node_modules/**/man
+node_modules/**/*/bower.json
+node_modules/**/*/component.json
+node_modules/**/*/readme.txt
+node_modules/**/*/*.md
+node_modules/**/*/*.markdown
+node_modules/**/*/HISTORY.md
+node_modules/**/*/CHANGELOG.md
+node_modules/**/*/.jshintrc
+node_modules/**/*/.travis.yml
+node_modules/**/*/.tern-project
+node_modules/**/*/.gitattributes
+node_modules/**/*/.npmignore
+node_modules/**/*/.no-sublime-package
+node_modules/**/*/.editorconfig
+node_modules/**/*/examples
+node_modules/**/*/Gruntfile.js
+node_modules/**/*/.gitmodules
+node_modules/**/*/README*
+node_modules/**/*/.eslintrc
+node_modules/**/*/.jscs.json
+node_modules/**/*/test.js
+node_modules/**/*/test
+node_modules/**/*/example
+node_modules/**/*/man
 node_modules/*/**/.bin
 
 node_modules/wrappy/test
@@ -92,3 +92,15 @@ node_modules/tern-react/tern_1.5.1
 node_modules/typescript/bin/resources
 node_modules/typescript/bin/tsc
 node_modules/typescript/bin/tsc.js
+node_modules/nan/doc
+node_modules/nan/tools
+node_modules/object-hash/dist
+
+node_modules/async/CHANGELOG.md
+node_modules/collect-stream/build.js
+node_modules/core-util-is/float.patch
+node_modules/core-util-is/util.js
+node_modules/jsctags/.coveralls.yml
+node_modules/jsctags/.istanbul.yml
+node_modules/sigmund/bench.js
+node_modules/util-deprecate/browser.js
