--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store  # don't remove this line!!!!
+
 node_modules/**/*/bower.json
 node_modules/**/*/component.json
 node_modules/**/*/readme.txt
