--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,15 @@
 {
-  "libs": ["ecma5", "ecma6"],
+  "libs": [
+    "ecma5",
+    "ecma6"
+  ],
   "plugins": {
     "doc_comment": true,
     "local-scope": true,
-    "jsx": true
+    "es_modules": true,
+    "jsx": true,
+    "modules": {
+      "load": true
+    }
   }
 }
